--- a/lab5/exe/ViewUserPosts.html
+++ b/lab5/exe/ViewUserPosts.html
@@ -1,28 +1,31 @@
 
 <html>
   <head>
-    <meta >
     <title>ViewUserPosts</title>
   </head>
   <body>
     <form action="ViewUserPosts.php" method="post">
       <?php
-      $mysqli = new mysqli("mysql.ecs.ku.edu","j567z112"," i-ngai3oH​","j567z112");
+
+      $mysqli = new mysqli("mysql.eecs.ku.edu", "j567z112", "i-ngai3oH", "j567z112");
+
+      /* check connection */
       if ($mysqli->connect_errno) {
           printf("Connect failed: %s\n", $mysqli->connect_error);
           exit();
       }
-
-      $query ="SELECT user_id FROM Users";
-      $result = $mysqli->query($query);
-      echo "<select name="choice">"
-       while ($row = $result->fetch_assoc())
-       {
-         $username = $row['user_id']
-        echo "<option value="username">$username</option>";
-       }
-       $result->free();
-      echo "</select>"
+      $query ="select * from Users";
+      if ($result = $mysqli->query($query))
+      {
+        echo "<select name='choice'>";
+         while ($row = $result->fetch_assoc())
+         {
+           $username = $row['user_id'];
+          echo "<option value='$username'>" .$username. "</option>";
+         }
+         $result->free();
+        echo "</select>";
+      }
       $mysqli->close();
       ?>
       <br>
